--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,25 @@ build = "assets/build.rs"
 winres = "0.1.11"
 
 [dependencies]
-tokio = "0.1.21"
-tokio-process = "0.2.4"
-
-[dependencies.winapi]
-version = "0.3.7"
-features = ["wincon", "winuser"]
-
+serde = { version = "1.0.106", features = ["derive"] }
+serde_json = "1.0.52"
+tokio = { version = "0.2.20", features = [
+        "io-util",
+        "macros",
+        "process",
+        "rt-core"
+]}
+winapi = { version = "0.3.8", features = [
+        "combaseapi",
+        "commdlg",
+        "errhandlingapi",
+        "libloaderapi",
+        "objbase",
+        "shobjidl",
+        "winbase",
+        "wincon",
+        "windowsx",
+        "winerror",
+        "wingdi",
+        "winuser"
+]}
