--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,22 +2,17 @@
 name = "undertasker"
 version = "0.1.0"
 authors = ["Brayden Carlson <braycarlson@hotmail.com>"]
-edition = "2018"
+edition = "2021"
 build = "assets/build.rs"
 
-[build-dependencies]
-winres = "0.1.11"
-
 [dependencies]
-serde = { version = "1.0.106", features = ["derive"] }
-serde_json = "1.0.52"
-tokio = { version = "0.2.20", features = [
-        "io-util",
-        "macros",
-        "process",
-        "rt-core"
-]}
-winapi = { version = "0.3.8", features = [
+i-slint-backend-winit = "=1.3.2"
+image = { version = "0.24.0", default-features = false, features = [ "ico" ] }
+rfd = "0.13.0"
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.1"
+slint = { version = "1.3.0", features = ["renderer-winit-skia", "serde"] }
+winapi = { version = "0.3.9", features = [
         "combaseapi",
         "commdlg",
         "errhandlingapi",
@@ -31,3 +26,8 @@ winapi = { version = "0.3.8", features = [
         "wingdi",
         "winuser"
 ]}
+winit = "0.29.10"
+
+[build-dependencies]
+slint-build = "1.3.0"
+winres = "0.1.11"
