--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,16 @@
 [package]
 name = "undertasker"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["Brayden Carlson <braycarlson@hotmail.com>"]
 edition = "2021"
 build = "assets/build.rs"
 
 [dependencies]
-i-slint-backend-winit = "=1.3.2"
-image = { version = "0.24.0", default-features = false, features = [ "ico" ] }
-rfd = "0.13.0"
-serde = { version = "1.0.195", features = ["derive"] }
-serde_json = "1.0.1"
-slint = { version = "1.3.0", features = ["renderer-winit-skia", "serde"] }
+image = { version = "0.25.9", default-features = false, features = [ "ico" ] }
+rfd = "0.17.2"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
+slint = { version = "1.15.1", features = ["renderer-winit-femtovg", "serde", "unstable-winit-030"] }
 winapi = { version = "0.3.9", features = [
         "combaseapi",
         "commdlg",
@@ -26,8 +25,7 @@ winapi = { version = "0.3.9", features = [
         "wingdi",
         "winuser"
 ]}
-winit = "0.29.10"
 
 [build-dependencies]
-slint-build = "1.3.0"
-winres = "0.1.11"
+slint-build = "1.15.1"
+winres = "0.1.12"
